..F....... [ZBX-7215] improved the design of the search auto suggest (Pavels)
.....J.... [ZBXNEXT-1776] added support for java.math.BigDecimal, java.math.BigInteger and some other open types (asaveljevs)
..F.I..... [ZBXNEXT-715] increased the size of sysmaps_elements.label and sysmaps_links.label fields to 2048 characters (Sasha)

Bug fixes:
..F....... [ZBX-7247] fixed multiselect allowing to select read only objects in places where write permissions are required (Pavels)
A......... [ZBX-7247] fixed map.create and map.update not checking permissions to objects used in map elements (Pavels)
A.F....... [ZBX-7238] fixed network discovery rule permission checks for admin users (Pavels)
..F....... [ZBX-7251] corrected multiple page headers and other text strings (Pavels)
..F....... [ZBX-7212] fixed interface macros priorities (Eduard)
A.F....... [ZBX-7235] fixed activating and deactivating a web scenarios (Eduard)
..F....... [ZBX-7181] fixed frontend natural sorting (Eduard)
..F....... [ZBX-7236] removed the sorting indicator from the "Last 20 issues" widget (Pavels)
A......... [ZBX-7224] fixed host prototype children group deletion (Eduard)
..F....... [ZBX-7199] fixed permission issue in bar report (Eduard)
..F....... [ZBX-7215] fixed search auto suggest alwasy displaying results in lower case (Pavels)
....I..... [ZBX-7166] added database upgrade patches to set status of template triggers to Enabled and state of template items to normal (Andris, Sasha)
..F....... [ZBX-7198] fixed displaying trigger popup menu relative to mouse cursor in Monitoring > Overview page (Ivo)
....I..... [ZBX-7218] fixed configuration failing with Oracle 12.1 instant client libraries (asaveljevs, Sasha)
A.F....... [ZBX-7165] fixed snmp fields validation in item configuration (Eduard)
..F....... [ZBX-5942] fixed setup navigation (Eduard, Pavels)
..F....... [ZBX-7137] fixed macros resolving in inventory host interfaces (Eduard)